--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -1,4 +1,4 @@
-@mixin flex($justify: flex-start, $align: center) {
+@mixin flex($justify: "flex-start", $align: "center") {
   display: flex;
   justify-content: $justify;
   align-items: $align;
