FIX: 전체 레이아웃 수정

--- a/src/components/ProfileImg/ProfileImg.scss
+++ b/src/components/ProfileImg/ProfileImg.scss
@@ -6,9 +6,10 @@
 
   img {
     position: relative;
-    max-width: 5rem;
+    max-width: var(--size);
     aspect-ratio: 1;
     border-radius: 50%;
+    cursor: pointer;
   }
 
   p {
