--- a/src/styles/_color.scss
+++ b/src/styles/_color.scss
@@ -1,4 +1,5 @@
-$primary-400: rgb(30, 143, 209);
+$primary-400: rgb(44, 170, 244);
 $primary-500: rgb(30, 143, 209);
 
 $gray-200: hsl(0, 0%, 83%);
+$gray-500: hsl(0, 0%, 60%);
