--- a/src/components/Story/Story.scss
+++ b/src/components/Story/Story.scss
@@ -1,16 +1,17 @@
 @use "../../styles/mixin" as mixin;
 
 .story {
+  --arrow-area: min-content;
+
   position: relative;
   display: grid;
-  grid-template-columns: min-content auto min-content;
+  grid-template-columns: var(--arrow-area) auto var(--arrow-area);
   align-items: center;
   max-width: 45rem;
   padding: 1.5rem 0.25em;
-  border: 2px solid #000;
+  box-shadow: inset 0 0 1px 1px gray;
 
   .arrow {
-    // position: absolute;
     cursor: pointer;
 
     &:hover {
@@ -18,8 +19,9 @@
     }
   }
 
-  .carousel__box {
+  .carousel {
     overflow: hidden;
+    transform: translateY(7px);
   }
 
   .carousel__slider {
