--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -7,8 +7,9 @@
 }
 
 body {
-  // display: grid;
-  // place-items: center;
+  display: grid;
+  justify-content: center;
+  padding-top: 7rem;
 }
 
 ul {
