--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,4 +1,4 @@
-@forward "./color";
-@forward "./mixin";
-@forward "./shadow";
-@forward "./components/button";
+@forward "./color" as color-*;
+@forward "./mixin" as mixin-*;
+@forward "./components";
+@forward "./utility/";
