--- a/src/components/Comment/Comment.scss
+++ b/src/components/Comment/Comment.scss
@@ -3,15 +3,26 @@
 
 .comment {
   position: relative;
+  height: 3rem;
   border: 2px solid aqua;
 
   &__front {
+    // TODO: movedX의 최대치 설정 -> delete 아이템2개 = 20% 까지만
+    // --max-movedX: calc(100% / 5);
     position: absolute;
     inset: 0;
     @include mixin.flex;
     padding-inline: var(--feed-padding-inline);
     background-color: #fff;
-    cursor: grab;
+    // transform: translateX(-50%);
+
+    .comment__writer {
+      font-size: 1.125rem;
+      font-weight: bold;
+    }
+    .comment__content {
+      font-size: 0.975rem;
+    }
 
     svg {
       display: inline-block;
@@ -24,12 +35,20 @@
     @include mixin.flex;
     justify-content: flex-end;
     gap: 0;
+    height: 100%;
+
+    .icon-wrapper {
+      @include mixin.flex;
+      justify-content: center;
+      width: 10%;
+      height: 100%;
+      background-color: color.$bg-delete;
+      text-align: center;
+    }
 
     svg {
-      width: 8%;
-      padding: 0.25em;
-      background-color: color.$bg-delete;
       color: #fff;
+      cursor: pointer;
     }
   }
 }
