--- a/src/components/Feed/Feed.scss
+++ b/src/components/Feed/Feed.scss
@@ -1,5 +1,7 @@
 .feed {
   --feed-padding-inline: 1rem;
-  background-color: lightpink;
+  // background-color: lightpink;
   margin-bottom: 10rem;
+  border-radius: 2em;
+  box-shadow: 0 0 1em rgba(0, 0, 0, 0.3);
 }
