--- a/src/components/Navigator/Navigator.scss
+++ b/src/components/Navigator/Navigator.scss
@@ -1,13 +1,13 @@
-@use "../../../styles/mixin" as mixin;
-@use "../../../styles/color" as color;
+@use "../../styles/mixin" as mixin;
+@use "../../styles/color" as color;
 
 .navigator {
   @include mixin.flex;
   justify-content: center;
-  padding-top: 1.25rem;
+  padding-block: 0.75rem;
 
   &__dot {
-    width: 0.875em;
+    width: 0.7em;
     aspect-ratio: 1/1;
     border: 1px solid color.$gray-500;
     border-radius: 50%;
