--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -26,3 +26,18 @@ img {
   max-width: 100%;
   object-fit: cover;
 }
+
+input,
+button,
+textarea {
+  border: none;
+  background: transparent;
+  resize: none;
+  outline: none;
+}
+
+a,
+button,
+svg {
+  cursor: pointer;
+}
