--- a/src/styles/_color.scss
+++ b/src/styles/_color.scss
@@ -1,6 +1,7 @@
 $primary-400: rgb(44, 170, 244);
 $primary-500: rgb(30, 143, 209);
 
+$gray-100: hsl(0, 0%, 90%);
 $gray-200: hsl(0, 0%, 83%);
 $gray-500: hsl(0, 0%, 60%);
 
