ADD: Story에서 화살표클릭시 slide되는 onClick handler 추가

--- a/src/components/ProfileImg/ProfileImg.scss
+++ b/src/components/ProfileImg/ProfileImg.scss
@@ -6,6 +6,7 @@
 
   img {
     position: relative;
+    min-width: var(--size);
     max-width: var(--size);
     aspect-ratio: 1;
     border-radius: 50%;
