--- a/src/components/Story/Story.scss
+++ b/src/components/Story/Story.scss
@@ -1,4 +1,4 @@
-@use "../../styles/mixin" as mixin;
+@use "../../styles" as *;
 
 .story {
   --arrow-area: min-content;
@@ -7,13 +7,13 @@
   display: grid;
   grid-template-columns: var(--arrow-area) auto var(--arrow-area);
   align-items: center;
+  gap: 0.5em;
+
   max-width: 45rem;
-  padding: 1.5rem 0.25em;
+  padding: 1.5rem 0.5em;
   box-shadow: inset 0 0 1px 1px gray;
 
   .arrow {
-    cursor: pointer;
-
     &:hover {
       opacity: 0.5;
     }
@@ -25,7 +25,14 @@
   }
 
   .carousel__slider {
-    @include mixin.flex();
-    --gap: 1em;
+    @include mixin-flex();
+    --gap: 0.75em;
+
+    $currIdx: var(--currIdx);
+    $offset: -10%;
+    $slideOffset: calc($currIdx * $offset);
+
+    transform: translateX($slideOffset);
+    transition: all 0.4s linear;
   }
 }
