--- a/src/styles/_color.scss
+++ b/src/styles/_color.scss
@@ -6,3 +6,20 @@ $gray-200: hsl(0, 0%, 83%);
 $gray-500: hsl(0, 0%, 60%);
 
 $bg-delete: hsl(0, 90%, 60%);
+
+$insta-gradient: linear-gradient(
+  45deg,
+  #f09433 0%,
+  #e6683c 25%,
+  #dc2743 50%,
+  #cc2366 75%,
+  #bc1888 100%
+);
+
+$skeleton: linear-gradient(
+  90deg,
+  rgba(255, 255, 255, 0) 0,
+  rgba(255, 255, 255, 0.2) 20%,
+  rgba(255, 255, 255, 0.7) 60%,
+  rgba(255, 255, 255, 0)
+);
