FIX: 스토리 부분에만 gradient 들어가도록 수정
스토리 부분에만 gradient 들어가도록 수정

--- a/src/components/ProfileImg/ProfileImg.scss
+++ b/src/components/ProfileImg/ProfileImg.scss
@@ -13,6 +13,7 @@
       content: "";
       position: absolute;
       border-radius: 50%;
+      opacity: var(--gradientShow, 0);
     }
 
     &::before {
