--- a/src/styles/animation/_skeleton.scss
+++ b/src/styles/animation/_skeleton.scss
@@ -16,5 +16,5 @@
   }
 
   animation: skeletonLoading 1s linear alternate 3,
-    loadingEnded 500ms linear 3.5s forwards;
+    loadingEnded 50ms ease-in-out 3s forwards;
 }
