FIX: Story Slider에서 색상고리 잘리는 현상 수정
story의 carousel__slider에 padding 추가

--- a/src/components/Story/Story.scss
+++ b/src/components/Story/Story.scss
@@ -25,13 +25,14 @@
   }
 
   .carousel__slider {
-    @include mixin-flex();
-    --gap: 0.75em;
-
     $currIdx: var(--currIdx);
     $offset: -10%;
     $slideOffset: calc($currIdx * $offset);
 
+    @include mixin-flex();
+    --gap: 0.75em;
+
+    padding: 0.375em;
     transform: translateX($slideOffset);
     transition: all 0.4s linear;
   }
