FIX:  초기 input의 파란색 bg 제거

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -36,6 +36,12 @@ textarea {
   outline: none;
 }
 
+// remove form's initial input background !important
+form input {
+  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0),
+    inset 0 0 0 100px rgba(255, 255, 255, 1);
+}
+
 a,
 button,
 svg {
