--- a/src/styles/_color.scss
+++ b/src/styles/_color.scss
@@ -1,5 +1,5 @@
-$primary-400: rgb(44, 170, 244);
-$primary-500: rgb(30, 143, 209);
+$primary-200: hsL(202, 90%, 80%);
+$primary-400: hsl(202, 90%, 56%);
 
 $gray-100: hsl(0, 0%, 90%);
 $gray-200: hsl(0, 0%, 83%);
